--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my name is Mark</h1>
+    <a href="./Assignment-1.2/login.html">Assignment 1.2</a>
 </body>
 </html>
