--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./Assignment-1.2/login.html">Assignment 1.2</a>
+    <a href="./Assignment-2/index.html">Assignment 2</a>
 </body>
 </html>
