--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="./Assignment-1.2/login.html">Assignment 1.2</a>
     <a href="./Assignment-2/index.html">Assignment 2</a>
+    <a href="./Assignment-3/index.html">Assignment 3</a>
 </body>
 </html>
