--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="./Assignment-1.2/login.html">Assignment 1.2</a>
     <a href="./Assignment-2/index.html">Assignment 2</a>
     <a href="./Assignment-3/index.html">Assignment 3</a>
+    <a href="https://github.com/markcoutinho/Web-Development-Course/tree/master/Assignment-4">Assignment 4</a>
     <a href="./Assignment-5/index.html">Assignment 5</a>
-
 </body>
 </html>
